--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,3 +1,16 @@
+img {
+	width: 900px;
+	border-radius: 15px;
+	height: 350px;
+	object-fit: cover;
+}
+
 .descriptionBlock {
-	padding: 10px;
+	padding-top: 10px;
+}
+.descriptionBlock img {
+	width: 200px;
+	height: 200px;
+	/* object-fit: contain; */
+	
 }
